--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 	</a>
 	<h1><a href="https://scratch.mit.edu/projects/119231886/">Sratch Project #1</a></h1>
 	<h1><a href="https://scratch.mit.edu/projects/118071637/">Scratch Project #2</a></h1>
-	<h1><a href="https://scratch.mit.edu/projects/118071637/">Repl.it Project #1</a></h1>
+	<h1><a href="https://repl.it/DuS8/5">Repl.it Project #1</a></h1>
 	<h1><a href="https://repl.it/EIoa/8">Repl.it Project #2</a></h1>
 	<h1><a href="https://repl.it/EOzC/22">Repl.it Project #3</a> </h1>
 	<h1><a href="http://ai2.appinventor.mit.edu/?locale=en#5891519563956224">MIT App Inventor Project #1</a></h1>
